index.css
@font-face {
    font-family: JetBrains;
    src: url(./assets/fonts/JetBrainsMono-VariableFont_wght.ttf);
}

:root {
    /* Heights / Widths */
    --padding-password-container: 2rem;
    --width-password-container: 33.75rem;
    --height-password-container: 39.5rem;
    --height-passwordOutput-container: 5rem;
    --height-strength-container: 4.5rem;
    --button-height: 4.0625rem;

    /* Font sizes/ weight(s) */
    --heading-l-font-size: 2rem;
    --heading-l-line-height: 2.6875rem;
    --heading-m-font-size: 1.5rem;
    --heading-m-line-height: 1.9375rem;
    --body-font-size: 1.125rem;
    --body-line-height: 1.4375rem;
    --font-weight: 700;

    /*Color pallete*/
    --body-bg-color: hsl(248, 22%, 4%);
    --strength-container-bg-color: hsl(248, 15%, 11%);
    --password-generator-bg-color: hsl(248, 10%, 15%);
    --main-text-color: hsl(252, 11%, 91%);
    --secondary-text-color: hsl(251, 9%, 53%);
    --call-to-action-color: hsl(127, 100%, 82%);
}

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    font-family: 'JetBrains';
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
    width: 100vw;
    background-color: var(--body-bg-color);
    font-weight: var(--font-weight);
    color: var(--main-text-color);
}

.h1--header {
    text-align: center;
    color: var(--secondary-text-color);
    font-size: var(--heading-m-font-size);
    margin-bottom: 2rem;
}

.section--passwordOutput {
    position: relative;
    width: 100%;
    height: var(--height-passwordOutput-container);
    margin-bottom: 1.5rem;
    font-size: var(--heading-l-font-size);
    line-height: var(--heading-l-line-height);
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-left: 2rem;
    padding-right: 2rem;
    background-color: var(--password-generator-bg-color);
}

.input--checkbox {
    position: absolute;
    opacity: 0;
    width: 1.35rem;
    height: 1.35rem;
    z-index: 1;
    cursor: pointer;
}

.svg--copy {
    cursor: pointer;
}

.block--copy,
.h2--strength {
    cursor: default;
}

.block--copy {
    font-size: .9rem;
    position: absolute;
    background-color: rgba(50, 50, 50, 0.721);
    top: -4rem;
    left: -2rem;
    text-align: center;
    width: 10ch;
    border-radius: .25rem;
    opacity: 0;
    transition: .5s all;
}

.h2--strengthDesc {
    font-size: var(--heading-m-font-size);
}

.block--copy::after {
    content: "";
    border-width: 1rem;
    border-style: solid;
    border-color: rgba(50, 50, 50, 0.721) transparent transparent transparent;
    position: absolute;
    left: 32.5%;
    top: 100%;
    bottom: -1rem;
}

.block--wrapperSVG {
    position: relative;
}

.svg--check {
    position: relative;
    top: .35rem;
    left: .25rem;
    z-index: 1;
}

.form--main {
    display: flex;
    flex-direction: column;
    flex: 1;
    padding: 1.5rem 2rem 1.5rem 2rem;
    background-color: var(--password-generator-bg-color);
}

.section--main {
    display: flex;
    flex-direction: column;
    padding: var(--padding);
    width: var(--width-password-container);
    height: var(--height-password-container);
}

.label--mainSlider,
.label--checkbox,
.h2--strength {
    font-size: var(--body-font-size);
    line-height: var(--body-line-height);
}


.label--checkbox::before,
.label--checkbox::after {
    content: "";
    display: inline-block;
    position: absolute;
    left: 0;
    height: 1.1rem;
    width: 1.1rem;
    border: 2px solid var(--main-text-color);
    z-index: 0;
    background-color: var(--call-to-action-color);
    cursor: pointer;
}

.label--checkbox::after {
    z-index: 1;
    background-color: var(--password-generator-bg-color);
}

.input--checkbox:checked~.label--checkbox::before {
    background-color: var(--call-to-action-color);
    border: none;
    height: 1.35rem;
    width: 1.35rem;
}

.input--checkbox:checked~.label--checkbox::after {
    z-index: -1;
}

.h2--strength {
    color: var(--secondary-text-color);
}

.block--upper {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.slider {
    -webkit-appearance: none;
    appearance: none;
    height: .5rem;
    margin-top: 1.5rem;
    margin-bottom: 2.5rem;
    background: linear-gradient(to right, hsl(127, 100%, 82%) 0%, hsl(127, 100%, 82%) 50%, var(--strength-container-bg-color) 50%, var(--strength-container-bg-color) 100%);
    transition: background 450ms ease-in;
}

.slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    background-color: var(--main-text-color);
    border-radius: 50%;
    height: 1.75rem;
    width: 1.75rem;
}

.slider::-moz-range-thumb {
    appearance: none;
    height: 1rem;
    width: 1rem;
    border-radius: 50%;
}

.block--characterNumber {
    color: var(--call-to-action-color);
    font-size: var(--heading-l-font-size);
    line-height: var(--heading-l-line-height);
}

.block--meterRating {
    height: 1.75rem;
    border: 2px solid var(--main-text-color);
    width: .65rem;
}

.h2--strengthCalc,
.block--meterRatings {
    display: flex;
}

.h2--strengthCalc {
    align-items: center;
}

.block--meterRatings {
    margin-left: 1rem;
    gap: .5rem;
}

.block--strengthContainer {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 2rem;
    height: var(--height-strength-container);
    padding-top: .25rem;
    padding-left: var(--padding-password-container);
    padding-right: var(--padding-password-container);
    background-color: var(--strength-container-bg-color);
}

.block--checkboxItem {
    display: flex;
    gap: 2rem;
    position: relative;
    margin-bottom: 1.25rem;
}

.block--checkboxItem:nth-child(6) {
    margin-bottom: 2rem;
}

.button {
    font-family: inherit;
    font-weight: inherit;
    font-size: var(--body-font-size);
    background-color: var(--call-to-action-color);
    border: none;
    width: 100%;
    height: var(--button-height);
    cursor: pointer;
}

.button:hover {
    background-color: hsl(127, 51%, 70%);
}

.svg--button {
    margin-left: 1rem;
}

#meterRating1,
#meterRating2,
#meterRating3 {
    background-color: hsl(42, 91%, 68%);
    border: none;
}

.block--passwordOutput {
    max-width: 90%;
    overflow: scroll;
}

@media (max-width:632px) {
    :root {
        --width-password-container: 21.4375rem;
        --height-password-container: 31.4375rem;
        --body-m-font-size: 1.125rem;
        --body-font-size: 1rem;
        --heading-l-font-size: var(--heading-m-font-size);
        --padding-password-container: .5rem;
        --height-passwordOutput-container: 4rem;
        --height-strength-container: 3.5rem;
        --height-passwordOutput-container: 4rem;
        --button-height: 3.5rem;
    }

    main {
        overflow: hidden;
    }

    .block--copy::after {
        border-width: .625rem;
        left: 35%;
    }

    .block--copy {
        top: -3.5rem;
        left: -1.5rem;
        width: 7ch;
    }

    .form--main {
        padding: 1rem;
    }

    .slider {
        margin-top: .5rem;
        margin-bottom: 1.5rem;
    }

    .block--strengthContainer {
        margin-bottom: 1rem;
    }

    .h2--strengthDesc {
        font-size: var(--body-font-size);
    }

    .section--passwordOutput {
        margin-bottom: 1rem;
        padding-left: 1rem;
        padding-right: 1rem;
    }
}

@media (max-width:350px) {
    :root {
        --width-password-container: 15.4375rem;
        --height-password-container: 31.4375rem;
        --body-m-font-size: 1rem;
        --body-font-size: .8rem;
        --heading-l-font-size: 1.25rem;
        --heading-m-font-size: 1.15rem --padding-password-container: .5rem;
        --height-passwordOutput-container: 4rem;
        --height-strength-container: 3.5rem;
        --height-passwordOutput-container: 4rem;
        --button-height: 3.5rem;
    }

    .block--checkboxItem {
        gap: 1rem;
    }

    .form--main {
        padding: .5rem;
    }
}

